# posetail-preprocessing

./: .gitignore  LICENSE  README.md  environment.yaml  generate_processed_dataset.py  pyproject.toml
posetail_preprocessing/datasets/: __init__.py  acinoset.py  allen_mouse.py  anipose_fly.py  base_dataset.py  cmupanoptic.py  cmupanoptic_3dgs.py  dex_ycb.py  duke_mouse.py  jarvis_monkey.py  johnson_mouse.py  kubric_multiview.py  pairr24m.py  pop3d.py  rat7m.py  sober_bird.py  voigts_mouse.py  zef3d.py
posetail_preprocessing/keypoints/: keypoints_acinoset.yaml  keypoints_duke_mouse.yaml  keypoints_face_cmupanoptic.yaml  keypoints_hand_cmupanoptic.yaml  keypoints_pose_cmupanoptic.yaml
posetail_preprocessing/schemes/: scheme_3dpop.toml  scheme_acinoset.toml  scheme_allen-mouse.toml  scheme_anipose-fly.toml  scheme_cmupanoptic.toml  scheme_johnson-mouse.toml  scheme_pairr24m.toml  scheme_rat7m.toml
posetail_preprocessing/utils/: __init__.py  calibration.py  filtering.py  io.py
